--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
         <ul class="messages"></ul>
       </div>
       <input class="inputMessage" placeholder="Type here..."/>
+      <div class="submit">
+        <button type="button"> Submit </button>
+      </div>
     </li>
     <li class="login page">
       <div class="form">
