--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,16 @@
       <div class="chatArea">
         <!-- <ul class="messages"></ul> -->
         <div class="messages" id="colOne">
-          <ul class="wordList" id="wordListOne"></ul>
+          <ul class="wordList" id="wordListOne">to, the, on, pet </ul>
           <hr />
-          <ul class="curWord" id="curWordOne"></ul>
+          <ul class="curWord" id="curWordOne">a v e r a </ul>
           <hr />
           <p class="final" id="finalOne">13</p>
         </div>
         <div class="messages" id="colTwo">
-          <ul class="wordList" id="wordListTwo"></ul>
+          <ul class="wordList" id="wordListTwo">pale, panic, yarn, mug, information</ul>
           <hr />
-          <ul class="curWord" id="curWordTwo"></ul>
+          <ul class="curWord" id="curWordTwo">b e a u t i f</ul>
           <hr />
           <p class="final" id="finalTwo">21</p>
         </div>
